# pose_make_db

./: .gitignore  LICENSE  README.md  activate_env.bat  open_nvim.bat  pyproject.toml
src/: calc_reliability.py  crus_dir.py  crus_flexion.py  landmark.py  make_db.py  make_filedb.py  make_pose_db.py  make_tags.py  pose_estimate.py  pose_estimate_blazepose.py  posedb.py  reliability_db.py  reliabilitydb.py  spine_dir.py  thigh_dir.py  thigh_flexion.py  torsodir_db.py
src/common/: argparse_aux.py  constants.py  convert.py  db.py  db_readwrite.py  default_path.py  log.py  posedb_desc.py  rect.py  reliability_desc.py  serialize.py  sql.py  table_check.py  table_check_exception.py  tags_desc.py  torsodir_desc.py  types.py  vec_db.py  wsl.py
src/desc/: crus_dir.py  crus_flexion.py  posedb.py  reliability.py  spinedir.py  tags.py  thigh_dir.py  thigh_flexion.py  torsodir.py
tests/: wsl_test.py
