[project]
name = "posesearch"
version = "0.1.0"
description = "Estimate posture in 3D from images and store it in an SQLite3 database"
authors = [
    { name = "Degarashi", email = "degarasu@gmail.com" }
]
dependencies = [
    "mediapipe>=0.10.21",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "matplotlib>=3.10.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/posesearch"]
