[project]
name = "posesearch"
version = "0.1.0"
description = "Estimate posture in 3D from images and store it in an SQLite3 database"
authors = [
    { name = "Degarashi", email = "degarasu@gmail.com" }
]
dependencies = [
    "mediapipe>=0.10.21",
    "sqlite-vec>=0.1.6",
    "tqdm>=4.67.1",
]
requires-python = "== 3.12.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/posesearch"]

[tool.uv.workspace]
members = [
    "pose_make_db",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "ruff>=0.13.2",
]
